tests/sksl/errors/ReservedNameUsing.glsl
### Compilation failed:

error: 1: expected an identifier, but found 'using'
1 error
